--- a/particles.html
+++ b/particles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Engine - Locked Tracking & Zoom</title>
+    <title>3D gesture movement </title>
     <style>
         body { margin: 0; overflow: hidden; background: #000; font-family: 'Segoe UI', sans-serif; }
         canvas { display: block; }
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div id="info">
-        <h1 style="color: #00f2ff; margin: 0; letter-spacing: 2px;">DYNAMIC LOCK ENGINE</h1>
+        <h1 style="color: #00f2ff; margin: 0; letter-spacing: 2px;">3D gesture movement</h1>
         <p>✊ <b>Fist:</b> LOCK Shape | 🖐️ <b>Open Palm:</b> UNLOCK</p>
         <p>🔒 <b>When Locked:</b> Hand movement moves shape | Pinch to Zoom</p>
         <div id="status-pill">STATUS: ACTIVE</div>
@@ -234,4 +234,5 @@
         initThree();
     </script>
 </body>
+
 </html>
